RESOLVED FIXED190559
[Apple Pay] Payment authorization results with ApplePayErrors should never be considered final
https://bugs.webkit.org/show_bug.cgi?id=190559
Summary [Apple Pay] Payment authorization results with ApplePayErrors should never be...
Andy Estes
Reported 2018-10-14 00:34:00 PDT
[Apple Pay] Payment authorization results with ApplePayErrors should never be considered final
Attachments
Patch (7.20 KB, patch)
2018-10-14 00:52 PDT, Andy Estes
no flags
Archive of layout-test-results from ews104 for mac-sierra-wk2 (3.03 MB, application/zip)
2018-10-14 02:05 PDT, EWS Watchlist
no flags
Patch (7.55 KB, patch)
2018-10-14 02:49 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2018-10-14 00:35:49 PDT
Andy Estes
Comment 2 2018-10-14 00:52:59 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 3 2018-10-14 02:05:12 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 4 2018-10-14 02:05:13 PDT Comment hidden (obsolete)
Andy Estes
Comment 5 2018-10-14 02:49:36 PDT
WebKit Commit Bot
Comment 6 2018-10-15 12:40:40 PDT
Comment on attachment 352275 [details] Patch Clearing flags on attachment: 352275 Committed r237134: <https://trac.webkit.org/changeset/237134>
WebKit Commit Bot
Comment 7 2018-10-15 12:40:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.